demo/traefik-v2/metrics/hotrod/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hotrod
  namespace: hotrod
  labels:
    app: hotrod
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.passHostHeader: 'true'
spec:
  rules:
  - host: hotrod.docker.localhost
    http:
      paths:
      - backend:
          serviceName: hotrod
          servicePort: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hotrod
  namespace: hotrod
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`hotrod.docker.localhost`)
      kind: Rule
      services:
        - name: hotrod
          port: 8080
